--- a/20201118.ipynb
+++ b/20201118.ipynb
@@ -108,6 +108,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('aaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
