--- a/qqq1.ipynb
+++ b/qqq1.ipynb
@@ -2,42 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "aaa=1\n",
-    "print(aaa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "bbb=2\n",
-    "print(bbb)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -50,8 +14,8 @@
     }
    ],
    "source": [
-    "ppp=10\n",
-    "print(ppp)"
+    "qqq=10\n",
+    "print(qqq)"
    ]
   },
   {
